[gd_scene load_steps=7 format=3 uid="uid://qxd7fbvfbjs5"]

[ext_resource type="PackedScene" uid="uid://cuuiumge42ghh" path="res://src/components/actions_sidebar/actions_sidebar.tscn" id="1_5rf5l"]
[ext_resource type="PackedScene" uid="uid://ibwyb5nfpxpn" path="res://src/components/projects/projects_list/projects_list.tscn" id="1_hecdv"]
[ext_resource type="Script" path="res://src/components/projects/projects.gd" id="1_p17nd"]
[ext_resource type="Script" path="res://src/components/misc/remove_missing_button.gd" id="4_2vxoc"]
[ext_resource type="PackedScene" uid="uid://bcn7ypx0qusqp" path="res://src/components/projects/import_project_dialog/import_project_dialog.tscn" id="4_ooebc"]
[ext_resource type="PackedScene" uid="uid://b6v7neuq31y1q" path="res://src/components/projects/new_project_dialog/new_project_dialog.tscn" id="5_bycab"]

[node name="Projects" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p17nd")

[node name="ProjectsList" parent="." instance=ExtResource("1_hecdv")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsSidebar" parent="." instance=ExtResource("1_5rf5l")]
layout_mode = 2

[node name="NewProjectButton" type="Button" parent="ActionsSidebar/TabActions" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "New Project"

[node name="ImportProjectButton" type="Button" parent="ActionsSidebar/TabActions" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Import"

[node name="ScanButton" type="Button" parent="ActionsSidebar/TabActions" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "Scan"

[node name="RemoveMissingButton" type="Button" parent="ActionsSidebar/RestActions" index="0"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_2vxoc")

[node name="ImportProjectDialog" parent="." instance=ExtResource("4_ooebc")]
visible = false

[node name="NewProjectDialog" parent="." instance=ExtResource("5_bycab")]
visible = false

[node name="ScanDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="item_edited" from="ProjectsList" to="." method="_on_projects_list_item_edited"]
[connection signal="item_manage_tags_requested" from="ProjectsList" to="." method="_on_projects_list_item_manage_tags_requested"]
[connection signal="item_removed" from="ProjectsList" to="." method="_on_projects_list_item_removed"]
[connection signal="item_selected" from="ProjectsList" to="." method="_on_projects_list_item_selected"]

[editable path="ActionsSidebar"]
